tests/references/ill-typed/unexpected-memory-address-1.stella
language core;

extend with #references;

fn chck(b : Bool) -> Bool {
  return (if true then false else true)
}

fn main(b : Bool) -> Bool {
  return chck(<0xABCDEF>)
}
